# JoonggoInfo

./: .gitignore  README.md  pyproject.toml
Crawling/: bunjang_scraping_post.py  pyproject.toml  scraping_post.py  scraping_post_info.py
Crawling/crawling/: ORM.py  extracting_post.py  extracting_postinfo.py
Makingcode/Deprecated_code/: deprecated_code.py
Makingcode/post/: crud.py  router.py  schema.py
Server/: database.py  main.py  models.py  pyproject.toml  requirements.txt
Server/Domain/Business/: router.py
Server/Domain/DB/: router.py
Server/Domain/DB/iPhone14_processed_info/: query.py  router.py
Server/server/Domain/Business/: router.py
client/: pubspec.yaml
crawling/: ORM.py  extracting_post.py  extracting_postinfo.py  joongnaSite_acq_data.py  temp1.py
jginfo_app/: README.md  pubspec.yaml
jginfo_app/android/app/: build.gradle
jginfo_app/android/app/src/main/: AndroidManifest.xml
jginfo_app/ios/Runner/: Info.plist
jginfo_app/ios/Runner.xcodeproj/: project.pbxproj
jginfo_app/lib/: apiCall.dart  chart_page.dart  common_widget.dart  enroll_page.dart  list_page.dart  main.dart
jginfo_app/linux/: CMakeLists.txt  my_application.cc
jginfo_app/macos/Runner.xcodeproj/: project.pbxproj
jginfo_app/macos/Runner/Configs/: AppInfo.xcconfig
jginfo_app/test/: widget_test.dart
jginfo_app/web/: index.html  manifest.json
jginfo_app/windows/: CMakeLists.txt
jginfo_app/windows/runner/: Runner.rc  main.cpp
jginfo_client/: pubspec.yaml
jginfo_client/test/: jginfo_client_test.dart
(+2 files in other folders)
