[tool.poetry]
name = "crawling"
version = "0.1.0"
description = "Crawling Package"
authors = ["uibo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.2"
requests = "^2.32.3"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
