[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["uibo <boui000210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
pandas = "^2.2.3"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
